# dockuier

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt  response_classes.py
backend/app/: main.py  response_classes.py
backend/scripts/: dependencies.py
frontend/: Dockerfile  README.md  package-lock.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: dockercard.js  grid.js  header.js
frontend/src/config/: index.js
nginx/: nginx.conf
