[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["symonk <jackofspaces@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.91.0"
uvicorn = "^0.20.0"
docker-py = "^1.10.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
poetry = "^1.3.2"
pre-commit = "^3.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
force_single_line = true
known_first_party = 'app'
default_section = 'THIRDPARTY'
forced_separate = 'tests'